syntax = "proto3";

option go_package = ".;order";
package order;

import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

// 定义swagger内容
option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
  info: {
		title: "grpc gateway order sample";
		version: "1.0";	
  };
  schemes: HTTP;
};

// The Order  service definition
service Order {
  rpc GetOrderInfo (GetOrderReq) returns (GetOrderRsp) {
   option (google.api.http) = {
      post: "/v1/order/getorder"
      body: "*"
    };
  };
}

// The request message containing  req
message GetOrderReq {
  string tid         = 1;
  string tenant_name = 2;
  string order_id    = 3;
}

// The response message containing rsp
message GetOrderRsp {
  string  order_name  = 1;
  string  description = 2;
  string  order_info  = 3;
}
